--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /doc/framework/Mybatis课堂笔记.md
 /doc/java/JavaWeb.md
 /doc/java/JavaWeb.assets/
+/docs/framework/Mybatis课堂笔记.md
+/docs/framework/Mybatis课堂笔记.assets/
+/docs/java/JavaWeb.md
+/docs/java/JavaWeb.assets/
