--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@
 /doc/java/JavaWeb.assets/
 /docs/framework/Mybatis课堂笔记.md
 /docs/framework/Mybatis课堂笔记.assets/
-/docs/java/JavaWeb.md
 /docs/java/JavaWeb.assets/
+/docs/java/JavaWeb课堂笔记.md
