update summary, add distributed-system.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /docs/framework/Spring个人学习笔记.md
 /docs/framework/images/Spring个人学习笔记/
 /docs/framework/images/Mybatis个人学习笔记/
+/docs/system-design/architecture/
+/interview.md
+/docs/system-design/mq/
